# smtp2tg

./: Cargo.toml  LICENSE.0BSD  README  smtp2tg.toml.example
.github/workflows/: rust-clippy.yml
src/: mail.rs  main.rs  telegram.rs  tests.rs  utils.rs
