[package]
name = "smtp2tg"
version = "0.5.2"
authors = [ "arcade" ]
edition = "2021"

[dependencies]
config = { version = "0.15", default-features = false, features = [ "toml" ] }
hostname = "0.4.1"
just-getopt = "2.0.0"
lazy_static = "1.5.0"
mail-parser = { version = "0.11", features = ["serde"] }
mailin-embedded = "^0"
regex = "1.11.1"
smol = "2.0.2"
stacked_errors = "0.7.1"
tgbot = "0.40"

[profile.release]
lto = true
codegen-units = 1
